[gd_scene load_steps=5 format=2]

[ext_resource path="res://NotFound.gd" type="Script" id=1]
[ext_resource path="res://Font/Copse_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://SceneTransition.tscn" type="PackedScene" id=3]
[ext_resource path="res://Font/Copse_48.tres" type="DynamicFont" id=4]

[node name="Node2D" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.290196, 0.839216, 0.819608, 1 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 100.0
margin_top = 132.0
margin_right = 868.0
margin_bottom = 300.0
custom_fonts/font = ExtResource( 4 )
text = "No save file was found. Would you like to start a new game?"
align = 1
autowrap = true

[node name="YesButton" type="Button" parent="."]
margin_left = 278.0
margin_top = 349.0
margin_right = 392.0
margin_bottom = 434.0
custom_fonts/font = ExtResource( 2 )
text = "Yes"

[node name="NoButton" type="Button" parent="."]
margin_left = 552.0
margin_top = 349.0
margin_right = 649.0
margin_bottom = 434.0
custom_fonts/font = ExtResource( 2 )
text = "No"

[node name="SceneTransition" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="NoButton" to="." method="_on_NoButton_pressed"]
